# mobileye-home-assignement

./: Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
src/: app.py
src/gitlab_calls/: README.md  __init__.py  gitlab_calls.py  pyproject.toml
tests/: app_test.py  gitlab_calls_test.py
