[project]
name = "gitlab_calls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vlad Bronfman", email = "vlad.bronfman@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
 "requests>=2.28.0",
    "FastAPI",
    "uvicorn",
    #"Flask",
    "reach",
    "pytest"
]

# for airgap environment and in case of custom modules
[[tool.uv.index]]
name = "custom"
url = "https://custom.index/simple"
default = false

[project.urls]
Repository = "https://github.com/vbronfman/mobileye-home-assignement/"


[project.scripts]
gitlab_calls = "gitlab_calls:main"

