[project]
name = "gitlab-calls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vlad Bronfman", email = "vlad.bronfman@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
